Fix legal anchor-links in the footer

--- a/i18n/de-DE.toml
+++ b/i18n/de-DE.toml
@@ -1,5 +1,5 @@
 footer.impressum = 'Impressum'
-footer.privacy = 'Privatsphäre'
+footer.privacy = 'Datenschutzerklärung'
 footer.attributions = 'Zuschreibungen'
 footer.links = "Weiterführende Links"
 footer.forum = 'Forum'
