--- a/themes/transnrw/i18n/de-DE.toml
+++ b/themes/transnrw/i18n/de-DE.toml
@@ -1,6 +1,6 @@
 footer.impressum = 'Impressum'
 footer.privacy = 'Datenschutzerklärung'
 footer.attributions = 'Zuschreibungen'
-footer.links = "Weiterführende Links"
+footer.links = "Socials"
 footer.forum = 'Forum'
 footer.legals = 'Rechtliches'
