--- a/themes/transnrw/i18n/de-DE.toml
+++ b/themes/transnrw/i18n/de-DE.toml
@@ -4,3 +4,6 @@ footer.attributions = 'Zuschreibungen'
 footer.links = "Socials"
 footer.forum = 'Forum'
 footer.legals = 'Rechtliches'
+
+nav.home = 'Home'
+nav.communitymap = 'Karte'
